Fixed bug #37870 (pgo_pgsql tries to de-allocate unused statements). Fixed bug #36681 (pdo_pgsql driver incorrectly ignored some errors). Fixed test for bug #38253 not to use faulty SQL that generates errors in PostgreSQL